Prevent player from dragging cards offscreen on mobile

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -8,6 +8,9 @@ body {
   display: flex;
   justify-content: center;
   background-color: #ededed;
+
+  height: 100%;
+  overflow-y: hidden;
 }
 
 @media screen and (min-width: 1024px) {
