--- a/src/Components/Playerspace/Playerspace.css
+++ b/src/Components/Playerspace/Playerspace.css
@@ -12,7 +12,6 @@
     --legend-size: 60px;
     --s-pile-size: 80px;
 
-
     --stack-offset-a: -43px;
     --stack-offset-b: -36px;
     --stack-offset-c: -29px;
@@ -42,7 +41,7 @@
     letter-spacing: 20%;
     text-align: center;
     font-size: var(--scorebug-mult-font-size);
-    color: #D7D7D7;
+    color: #9C9C9C;
     user-select: none;
     margin-top: var(--scorebug-mult-margin-top);
     margin-bottom: var(--scorebug-mult-margin-bot);
